--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </div>
         
         <div class="second-row " id="menu">
-            
-            <ul><a href="#" id="home">Home</a>
+            <a href="#" id="home">Home</a>
+            <ul>
                 <li><a href="#">JavaScript Overview</a>
                     <ul>
                         <li><a href="#">Variable Declaration</a></li>
